Polish and improve the usability of the issue summary table.
The issue summary table has been reworked to be easier to work with and
more visually appealing.

The old table had borders between each row, which was just added noise.
It also was pretty text-heavy for status information, both in the
columns and in the counts (which themselves were off to the side, and
less useful there), and used select boxes for status filters (which
blended together too much and likely weren't well-used).

The new table has a cleaner, friendlier look to it. The borders between
rows are gone, except when differentiating between rows of different
status types (like Open vs. Resolved, when in the All Statuses view).

Each row has an icon showing the status type for that row, which is
easier to see at a glance than the status text column. That old column
is gone now, giving more room for the summary.

The timestamp column no longer shows absolute timestamps, but rather
relative ones, making it easier to see how old a comment is.

The status filter and counts have been merged. There's now a set of tabs
for choosing the view of the table. These use icons for Open, Resolved,
and Dropped, which match the rows in the table and the issue areas in
comments. This makes it much easier to differentiate counts and to
switch between the views.

The user filter is now shown directly above the user column, helping tie
things together nicely. The enties in the column also now show
gravatars, to help visually distinguish the users.

There is one side-effect of the change, which is that the API for
comments has changed from listing timestamps in a localized format to
listing them in ISO 8601 format. This was the only API using a
non-standard format for timestamps, and it was due to the issue summary
tracker. We no longer need the localized format, and reverted the API to
something sane.

Testing Done:
Python and JavaScript unit tests pass.

All tests were performed in Chrome, Firefox, and IE11 in both des

--- a/reviewboard/static/rb/css/defs.less
+++ b/reviewboard/static/rb/css/defs.less
@@ -77,14 +77,27 @@
 @admin-msg-banner-bg: #FFC;
 @admin-msg-banner-border-color: darken(@admin-msg-banner-bg, 50%);
 
+@issue-table-border-color: #999;
+@issue-table-cell-padding: 7px;
+@issue-table-header-bg: #E9E9E9;
+@issue-table-header-hover-bg: darken(@issue-table-header-bg, 5%);
+@issue-table-row-border-color: #CCC;
+@issue-table-tab-border-color: @issue-table-border-color;
+@issue-table-tab-bg: @issue-table-header-bg;
+@issue-table-tab-hover-bg: lighten(@issue-table-header-bg, 5%);
+@issue-table-tab-hover-border-color: lighten(@issue-table-tab-border-color, 5%);
+
 @issue-opened-bg: #fff4B0;
 @issue-opened-border-color: darken(@issue-opened-bg, 40%);
+@issue-opened-hover-bg: desaturate(darken(@issue-opened-bg, 10%), 20%);
 @issue-opened-link-color: darken(@issue-opened-bg, 60%);
 @issue-discarded-bg: #ECECEC;
 @issue-discarded-border-color: darken(@issue-discarded-bg, 20%);
+@issue-discarded-hover-bg: darken(@issue-discarded-bg, 5%);
 @issue-discarded-link-color: darken(@issue-discarded-bg, 60%);
 @issue-resolved-bg: #FAFAFA;
 @issue-resolved-border-color: darken(@issue-resolved-bg, 10%);
+@issue-resolved-hover-bg: darken(@issue-resolved-bg, 5%);
 @issue-resolved-link-color: darken(@issue-resolved-bg, 60%);
 
 /*
